Fix overflow-x

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
     width: 100%;
     height: 100%;
 }
+
 * {
     font-family: "Segoe UI";
 }
@@ -9,11 +10,13 @@ html {
 body{
     background-color: #0E0E0E;
     color: whitesmoke;
+    overflow-x: hidden
 }
 
 a {
     text-decoration: none;
     color: whitesmoke;
+    
 }
 
 nav input {
